# CryptoStream-real-time-crypto-analytics-pipeline

./: .env.example  .gitignore  00_PROJECT_OVERVIEW.md  01-PRD.md  MODULE_1_INFRASTRUCTURE.md  MODULE_2_DATABASE_MEDALLION.md  MODULE_3_INGESTION_KAFKA.md  MODULE_4_STREAM_PROCESSING.md  MODULE_5_TRANSFORMS_DBT.md  MODULE_6_ORCHESTRATION_AIRFLOW.md  MODULE_7_API_AND_DASHBOARD.md  Makefile  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/src/api/: __init__.py  config.py  db.py  dependencies.py  main.py  models.py  repository.py
api/src/api/routers/: __init__.py  candles.py  health.py  indicators.py  prices.py
api/tests/: conftest.py  test_endpoints.py  test_repository.py
cryptostream_common/: pyproject.toml
cryptostream_common/src/cryptostream_common/: __init__.py  env.py
dashboard/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
dashboard/src/: App.jsx  api.js  styles.css
dashboard/src/components/: CandleChart.jsx  HealthBadge.jsx  LatestPrices.jsx
db/: run_migrations.py
db/migrations/: 0001_schemas.sql  0002_bronze_prices_raw.sql
docs/: ARCHITECTURE.md  ENV_REFERENCE.md  MODULES.md  MODULE_1_INFRASTRUCTURE.md  MODULE_2_DATABASE.md  MODULE_3_INGESTION.md  MODULE_4_STREAMING.md  MODULE_5_TRANSFORMS.md  MODULE_6_ORCHESTRATION.md  MODULE_7_API_DASHBOARD.md  OPERATIONS.md  QUICKSTART.md  TROUBLESHOOTING.md
infra/kafka/: create_topics.sh
infra/postgres-init/: 01-create-airflow-db.sql
ingestion/: Dockerfile  pyproject.toml
ingestion/src/ingestion/: __init__.py  config.py  main.py  normalizer.py  producer.py  ws_client.py
ingestion/tests/: conftest.py  test_dlq_routing.py  test_normalizer.py  test_reconnect.py  test_ws_integration.py
orchestration/: Dockerfile  requirements-airflow.txt
orchestration/dags/: _common.py  backfill_dag.py  retention_dag.py  transform_dag.py
streaming/: pyproject.toml
streaming/src/streaming/: __init__.py  config.py  stream_to_bronze.py  upsert.py
streaming/tests/: conftest.py  test_idempotency.py
teach/: 00_LEARNING_PATH.md  01_BIG_PICTURE.md  02_DATABASE_FUNDAMENTALS.md  03_KAFKA_FUNDAMENTALS.md  04_DOCKER_FUNDAMENTALS.md  05_WEBSOCKETS_FUNDAMENTALS.md  06_SPARK_FUNDAMENTALS.md  07_DBT_FUNDAMENTALS.md  08_AIRFLOW_FUNDAMENTALS.md  09_FASTAPI_FUNDAMENTALS.md  10_REACT_FUNDAMENTALS.md  11_HOW_DATA_FLOWS.md  12_DESIGN_DECISIONS.md  13_HANDS_ON_TOUR.md  14_GLOSSARY.md
transforms/: .user.yml  dbt_project.yml  profiles.yml
transforms/macros/: generate_schema_name.sql
transforms/models/: schema.yml  sources.yml
transforms/tests/: assert_candle_bounds.sql
(+3 files in other folders)
