[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streaming"
version = "0.1.0"
description = "CryptoStream Spark Structured Streaming job: Kafka → bronze.prices_raw"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "cryptostream-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a live Postgres (set DATABASE_URL); skipped by `pytest -q`",
]